# zig-esp32-riscv-kernel

./: .gitignore  CMakeLists.txt  build.zig  build.zig.zon  generate_paths.py
main/: CMakeLists.txt  app.zig
main/compositor/: compositor.zig
main/idf_c/: idf_c.zig
main/task/: task.zig
main/uart/: uart.zig
